Added London Gmap with marker for London home

--- a/index.html
+++ b/index.html
@@ -52,9 +52,20 @@
 
     <div class="container" align="center">
       <div align="center" class="span3">
-        <p>This is where I live</p>
+        <p>This is where I live in Norwich</p>
       </div>
-      <div class="span9" id="basic_map"></div>
+      <div class="span9" id="Norwich_map"></div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="container" align="center">
+      <div align="center" class="span3">
+        <p>This is where I live in London</p>
+      </div>
+      <div class="span9" id="London_map"></div>
     </div>
 
 
