--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
@@ -20,11 +21,6 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="brand" href="index.html">Fonz</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -39,20 +35,12 @@
     <br>
     <br>
 
-    <h1 align="center">This is</h1>
-
-    <br>
-    <br>
-    <br>
-
-    <div class="container" align="center">
+    <div class="container main" align="center">
       <div class="span12">
         <img src="images/fonz_approved.jpg">
       </div>
-      <div>
+      <div class="span12 social-links">
         <a href="https://twitter.com/willgdjones"><img src="images/twitter_black.png"></a>
-      </div>
-      <div>
         <a href="http://www.linkedin.com/in/willgdjones"><img src="images/linkedin_black.jpeg"></a>
       </div>
     </div>
